src/objects/Boat__c/fields/BoatType__c.field-meta.xml
<CustomField>
        <fullName>BoatType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Boat Type</label>
        <referenceTo>BoatType__c</referenceTo>
        <relationshipLabel>Boats</relationshipLabel>
        <relationshipName>Boats</relationshipName>
        <type>Lookup</type>
    </CustomField>