src/objects/Boat__c/fields/Description__c.field-meta.xml
<CustomField>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </CustomField>