src/objects/Boat__c/fields/Length__c.field-meta.xml
<CustomField>
        <fullName>Length__c</fullName>
        <inlineHelpText>In feet</inlineHelpText>
        <label>Length</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>