src/objects/Boat__c/fields/Price__c.field-meta.xml
<CustomField>
        <fullName>Price__c</fullName>
        <inlineHelpText>Estimated Pric</inlineHelpText>
        <label>Price</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </CustomField>