src/objects/Boat__c/fields/Year_Built__c.field-meta.xml
<CustomField>
        <fullName>Year_Built__c</fullName>
        <label>Year Built</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>